# bist-swing-system

./: .gitignore  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  daily-scan.yml
configs/: live.yaml  universe.txt
dashboard/: app.py  live_portfolio.py
scripts/: analyze_rolling.py  risk_monitor.py  run_daily_scan.py  run_filter_ablation.py  run_full_system.py  run_live_alerts.py  run_paper_portfolio.py  run_portfolio_backtest.py  run_portfolio_grid.py  run_portfolio_rolling.py  run_real_backtest.py  run_summary_report.py
src/bist_swing/: backtest.py  capital_filter.py  data.py  indicators.py  institutional_momentum.py  liquidity_shock.py  live_events.py  logger.py  message_fmt.py  pipeline.py  portfolio.py  position_sizing.py  position_state.py  reporting.py  risk_engine.py  selection.py  signals.py  state_store.py  telegram_notifier.py  trade_throttle.py  utils.py
src/bist_swing_system.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_imports.py  test_portfolio.py
